fixtures/invalid/html-attribute.mu
@metadata key="<script>"
Attributes cannot contain raw HTML.
